libnet 1.28  -- TODO

  * Add optional POD coverage testing.
  * Add optional POD testing.
  * Add optional Perl::Critic testing.
  * Make code Perl::Critic clean.
  * Move Net/*.pm into lib/Net/ sub-directory within distribution. This is the
    usual layout style these days.
  * Change Net::SMTP::auth() so that it now falls back to another supported AUTH
    method if a given AUTH method fails.  [Ivan Baktsheev; closes PR#3]
  * Change Net::SMTP::auth() so that it uses the SMTP AUTH mechanism(s)
    specified in the Authen::SASL object if one is provided instead of a
    username.   If a plain text username is specified then use the first
    reported SMTP AUTH method supported, as usual.  [Ewen McNeill; resolves CPAN
    RT#58002]
  * Add support for IPv6 and SSL to Net::SMTP and Net::POP3.  These features are
    only available if the user has

      a recent IO::Socket::SSL for SSL support
      a recent IO::Socket::IP or an older IO::Socket::INET6 for IPv6 support

    If no SSL module is available it will work as before, but attempts to use
    the SSL functionality will result in an error message.  If no IPv6 modules
    are available it will just use IPv4 as before.  With IPv6 modules installed
    one can of course still access IPv4 hosts.
    [Steffen Ullrich; resolves CPAN RT#93823]

libnet 1.27  -- Fri May 30 2014

  * Simplified Makefile.PL requirements.

libnet 1.26  -- Fri May 30 2014

  * Set minimum required ExtUtils::MakeMaker version to 6.64 to ensure that all
    parameters used are supported, to save jumping through hoops to support
    earlier versions.  (This should not be a problem since ExtUtils::MakeMaker
    6.64 is easily installed into Perl 5.8.1 and above, that being the whole
    point of the new choice of minimum supported Perl version.)
  * Set minimum required Perl version to 5.8.1.  This is in line with the
    minimum requirement of the "Perl Toolchain".

libnet 1.25  -- Tue Feb 04 2014
